Add integration tests support.
1. Start Jetty
2. Run grunt qunit
3. Stop Jetty