@@ -1,68 +1,111 @@
 <?xml version="1.0"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>com.wicketinaction</groupId>
-        <artifactId>blogs</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-    <artifactId>functional-qunit</artifactId>
-    <name>Functional Tests based on QUnit</name>
-    <packaging>war</packaging>
+		 xmlns="http://maven.apache.org/POM/4.0.0"
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.wicketinaction</groupId>
+		<artifactId>blogs</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+	<artifactId>functional-qunit</artifactId>
+	<name>Functional Tests based on QUnit</name>
+	<packaging>war</packaging>
 
-    <dependencies>
+	<dependencies>
 
-        <dependency>
-            <groupId>org.apache.wicket</groupId>
-            <artifactId>wicket-examples</artifactId>
-            <version>6.3.0</version>
-            <type>war</type>
-        </dependency>
+		<dependency>
+			<groupId>org.apache.wicket</groupId>
+			<artifactId>wicket-examples</artifactId>
+			<version>6.3.0</version>
+			<type>war</type>
+		</dependency>
 
-        <!--  JETTY DEPENDENCIES FOR TESTING  -->
-        <dependency>
-            <groupId>org.eclipse.jetty.aggregate</groupId>
-            <artifactId>jetty-all-server</artifactId>
-            <version>${jetty.version}</version>
-            <scope>provided</scope>
-        </dependency>
+		<!--  JETTY DEPENDENCIES FOR TESTING  -->
+		<dependency>
+			<groupId>org.eclipse.jetty.aggregate</groupId>
+			<artifactId>jetty-all-server</artifactId>
+			<version>${jetty.version}</version>
+			<scope>provided</scope>
+		</dependency>
 
-    </dependencies>
+	</dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.3</version>
-                <configuration>
-                    <overlays>
-                        <overlay>
-                            <groupId>org.apache.wicket</groupId>
-                            <artifactId>wicket-examples</artifactId>
-                        </overlay>
-                    </overlays>
-                </configuration>
-            </plugin>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.3</version>
+				<configuration>
+					<overlays>
+						<overlay>
+							<groupId>org.apache.wicket</groupId>
+							<artifactId>wicket-examples</artifactId>
+						</overlay>
+					</overlays>
+				</configuration>
+			</plugin>
 
-            <plugin>
-                <groupId>org.mortbay.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
-                <version>${jetty.version}</version>
-                <configuration>
-                    <connectors>
-                        <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-                            <port>8080</port>
-                            <maxIdleTime>3600000</maxIdleTime>
-                        </connector>
-                    </connectors>
-                </configuration>
-            </plugin>
-
-        </plugins>
-    </build>
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>${jetty.version}</version>
+				<configuration>
+					<systemProperties implementation="org.mortbay.jetty.plugin.SystemProperties">
+						<systemProperty implementation="org.mortbay.jetty.plugin.SystemProperty">
+							<name>jetty.port</name>
+							<value>51982</value>
+						</systemProperty>
+					</systemProperties>
+					<jvmArgs>-Xms$256m -Xmx256m -verbose:gc -XX:+PrintGCDetails -XX:+PrintClassHistogram</jvmArgs>
+					<stopKey>STOP</stopKey>
+					<stopPort>51983</stopPort>
+				</configuration>
+				<executions>
+					<execution>
+						<id>start-jetty</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>deploy-war</goal>
+						</goals>
+						<configuration>
+							<daemon>true</daemon>
+							<reload>manual</reload>
+						</configuration>
+					</execution>
+					<execution>
+						<id>stop-jetty</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			 <plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.2.1</version>
+				<executions>
+					<execution>
+						<id>run-qunit</id>
+						<phase>integration-test</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>grunt</executable>
+							<arguments>
+								<argument>qunit</argument>
+								<!--<argument>-v</argument>-->
+							</arguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 	
 	<properties>
 		<jetty.version>7.6.8.v20121106</jetty.version>
